--- a/mysql.yml
+++ b/mysql.yml
@@ -23,11 +23,11 @@ services:
         # let data persist
         # 將 docker container 的 volumes 跟外部 volumes 做連結, 
         # 讓資料不會因為, container close or update, 而遺失
-    # deploy:
-    #   mode: replicated
-    #   replicas: 1
-    #   placement:
-    #     constraints: [node.labels.mysql == true]
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.mysql == true]
     networks:
         - layx
 
@@ -40,11 +40,11 @@ services:
         - 8080:80
 
       # swarm 設定
-    # deploy:
-    #   mode: replicated
-    #   replicas: 1
-    #   placement:
-    #     constraints: [node.labels.mysql == true]
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.mysql == true]
 
     depends_on:
       - mysql
